# garmin_app

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  requirements.txt
app/: Home.py
app/pages/: 1_Trends.py  2_Activities.py  3_Records.py  4_Training_Load.py
scripts/: refresh.py
src/garmin_reporting/: __init__.py  auth.py  cli.py  config.py  db.py  fetch.py  records.py  transform.py
src/garmin_reporting/app/: __init__.py  account.py  charts.py  main.py  state.py
src/garmin_reporting/app/pages/: activities.py  overview.py  records.py  training_load.py  trends.py
tests/: test_app_smoke.py  test_auth.py  test_db.py  test_fetch_parsing.py  test_records.py  test_transform.py
